perf(backend): 批量查询消除关注列表/挑战排行榜的 N+1
UserService.followers/followings 与 ChallengeService.rank 改为 findAllById 批量取用户;同步更新 ChallengeServiceTest stub。mvn test 98 通过